Reintroduces the back button.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
   <div id="details">
     <p style="padding-bottom: 1em;">
+      <a id="back-button">&lt; back</a>    
       <span style="float:right;">
         <a href="https://3d.io/docs/api/1/furniture.html" target="_blank">Docs</a> |
         <a href="https://github.com/archilogic-com/3dio-furniture-app" target="_blank">Github</a> |
