--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div id="library">
     <div id="search">
-      <input placeholder="type a query, e.g. 'blue chair'" />
+      <input placeholder="type a query, e.g. 'blue chair widthMax:0.6'" />
     </div>
     <div id="results"></div>
   </div>
